# FrameCat

./: README.md  dev.sh  meson.build
include/components/backend/: networkInterfaces.hpp
include/components/ui/: ethernetAdapterList.hpp  mainMenu.hpp  viewManager.hpp
include/views/: interfaceListView.hpp  mainMenuView.hpp
src/: main.cpp  meson.build
src/components/backend/: networkInterfaces.cpp
src/components/ui/: ethernetAdapterList.cpp  ethernetAdapterList.hpp  mainMenu.cpp  viewManager.cpp
src/view/: interfaceListView.cpp  interfaceListView.hpp
src/views/: interfaceListView.cpp  mainMenuView.cpp  mainMenuView.hpp
